--- a/data_viz_practice.qmd
+++ b/data_viz_practice.qmd
@@ -179,3 +179,115 @@ ggplot(data = lizards, aes(y = fct_infreq(common_name))) +
   facet_grid(sex ~ tail)
 ```
 
+```{r}
+
+# using scale_y_continuous function 
+# breaks and limits 
+
+ggplot(data = lizards, aes(x = total_length, y = weight)) +
+  geom_point() +
+  scale_x_continuous(breaks = seq(0, 500, by = 250),
+                     limits = c(0,500)) +
+scale_y_continuous(breaks = seq(from = 0, to = 70, by = 10),
+                   limits = c(0,70)) +
+  theme_light()
+```
+
+```{r}
+
+## using scales package
+## using scales_"_" functions as well
+## scale_x_date(breaks = scales::breaks_pretty() can use this to automatically "break" scaling
+
+lizards_counts <- lizards %>% 
+  mutate(date = lubridate::mdy(date)) %>% 
+  count(date)
+
+ggplot(data = lizards_counts, aes(x = date, y = n)) +
+  geom_line() + 
+  scale_x_date(breaks = scales::breaks_width("3 years"),
+               labels = scales::label_date("%Y")) +
+  labs(x = "Date",
+       y = "Number of lizards (n)")
+```
+
+```{r}
+## adding color gradient to your graphs
+## scale_color_gradientn(), can mannually tell what colors you want 
+##   scale_color_gradient(low = "red", high = "navy")
+
+ggplot(data = lizards, aes(x = total_length, y = weight)) +
+  geom_point(aes(color = total_length)) +
+  scale_color_steps2(low = "green", mid = "white", high = "red", midpoint = 150,
+                     breaks = c(50, 75, 150, 180, 220, 280))
+  
+
+
+## scale_color_steps(low = "red", high = "black")
+  
+## scale_color_gradientn(colors = c("orange", "red", "purple", "navy", "black"))
+
+```
+
+```{r}
+
+# doing crazy things to your graph
+
+p <- ggplot(lizards, aes(x = total_length, y = weight)) +
+  geom_point()
+
+p +
+  theme(panel.grid.minor = element_blank(),
+        panel.grid.major = element_line(color = "red"),
+        plot.background = element_rect(fill = "pink"),
+        text = element_text(size = 12, family = "serif"),
+        axis.text.x = element_text(color = "blue"),
+        axis.text.y = element_text(color = "green"),
+        panel.background = element_rect(color = "purple", fill = "yellow"))
+```
+
+```{r}
+
+## ADDING vertical and horizontal lines to graph
+
+p + 
+  geom_hline(yintercept = mean(lizards$weight), color = "blue", linetype = "dashed") +
+  geom_vline(xintercept = 100, color = "red") +
+ #  annotate("text", x = 100, y = 50, label = "COOL", color = "purple") +
+  annotate("text", x = 350, y = mean(lizards$weight) + 2, label = "Mean Weight") 
+```
+
+```{r}
+
+## monster graphic, 
+
+
+mono <- read_csv(here("data_tidy", "mono.csv"))
+
+ggplot(data = mono, aes(x = year, y = lake_level)) +
+  geom_rect(aes(xmin = 1941,
+                xmax = 1983,
+                ymin = 6350,
+                ymax = 6440),
+            fill = "gray90") +
+  geom_line() +
+  labs(x = "Year",
+       y = "Lake surface level\n(feet above sea level)\n",  # ## \n puts label on separate line
+       title = "Mono lake (1850 - 2017)",
+       caption = "Data: Mono Basin Clearinghouse") +
+  scale_y_continuous(limits = c(6350, 6440),
+                     breaks = c(6370, 6400, 6430),
+                     labels = scales::label_comma()) + ## adds comma on the x axis 
+  scale_x_continuous(limits = c(1850, 2020),
+                     breaks = seq(1850, 2010, 20),
+                     expand = c(0,0)) +
+  geom_hline(yintercept = 6360, linetype = "dashed") +
+  annotate("text", x = 1910, y = 6370,
+           label = "Decreased shrimp abundance expected\n(6,360 feet above sea level)") +
+  annotate("text", x = 1962, y = 6425,
+           label = "unrestricted diversions\n(1941 - 1983)",
+           size = 3) +
+  theme_minimal()
+
+```
+
